update colors variables

--- a/bingo/static/css/globals.css
+++ b/bingo/static/css/globals.css
@@ -12,6 +12,15 @@
     --white: #fff;
     --black: #000;
 
+    --primary-button-limpar-color: #ffff00;
+    --secondary-button-limpar-color: #ffa500;
+    --primary-button-espaco-color: #1e90ff;
+    --secondary-button-espaco-color: #246bb3;
+    --primary-button-backspace-color: #9c9c9c;
+    --secondary-button-backspace-color: #5a5656;
+    --back-keyboard-color: #696b6d;
+    --tooltip: #fcdd56ef;
+
     font-size: 62.5%;
 }
 
